--- a/geography/static/tpl/view_tpl.html
+++ b/geography/static/tpl/view_tpl.html
@@ -1,4 +1,4 @@
-<blind-map code="{{part}}" show-tooltips="true" map="map" ></blind-map>
+<blind-map code="{{part}}" show-tooltips="true" map="imageController" ></blind-map>
 <div id="container">
   <div ng-hide="placesTypes || error" class="loading-indicator">
   </div>
