--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -91,16 +91,16 @@
       <!--
         <a class="btn btn-lg btn-default" 
            ng-show="user.username"
-           href="#/goals/" >
+           href="/goals/" >
           <i class="glyphicon glyphicon-screenshot"></i> {{'Osobní cíle' | trans }}
         </a>
         -->
         <a class="btn btn-lg btn-default" 
-           href="#/refreshpractice/{{part}}/{{placeType}}" >
+           href="/refreshpractice/{{part}}/{{placeType}}" >
           <i class="glyphicon glyphicon-repeat"></i> {{'Znovu procvičovat' | trans }}
         </a>
         <a class="btn-continue btn btn-lg btn-default {{!showSummary || 'btn-primary'}}" 
-           href="#/view/{{part}}/" >
+           href="/view/{{part}}/" >
           <i class="glyphicon glyphicon-globe"></i> {{'Mapa znalostí' | trans }}
         </a>
       </span>
