Fix some typos and details

--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -24,7 +24,7 @@
         </span>
         <br class="clearfix">
       </div>
-        <div mnemonic="{{question.}}" class="col-sm-12"
+        <div mnemonic="{{question}}" class="col-sm-12"
           ng-show="canNext && question.answered_code != question.description">
         </div>
       <span class="col-sm-7">
