--- a/geography/static/tpl/view_tpl.html
+++ b/geography/static/tpl/view_tpl.html
@@ -34,7 +34,7 @@
             <i class="glyphicon {{type.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
             {{type.name}}
           </h3>
-          <a href="/practice/{{part}}/{{type.slug}}" 
+          <a href="/practice/{{part}}/{{type.identifier}}" 
              class="btn btn-primary pull-right"  >
             <i class="glyphicon glyphicon-check"></i> {{'Procvičovat' | trans }}
           </a>
