--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -20,32 +20,32 @@
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | trans }}
         </div>
-          <a href="#/practice/europe/state"
+          <a href="/practice/europe/state"
             class="btn btn-primary btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Státy Evropy" | trans }}
           </a>
-          <a href="#/practice/cz/river"
+          <a href="/practice/cz/river"
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Řeky ČR" | trans }}
           </a>
-          <a href="#/practice/us/state" 
+          <a href="/practice/us/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Státy USA" | trans }}
           </a>
-          <a href="#/practice/cz/mountains" 
+          <a href="/practice/cz/mountains" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Pohoří ČR" | trans }}
           </a>
-          <a href="#/practice/asia/state" 
+          <a href="/practice/asia/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Státy Asie" | trans }}
           </a>
-          <a href="#/practice/africa/river" 
+          <a href="/practice/africa/river" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
             {{"Řeky Afriky" | trans }}
