Fix some issues with user profile page

--- a/geography/static/tpl/user_tpl.html
+++ b/geography/static/tpl/user_tpl.html
@@ -55,7 +55,7 @@
     </div>
     </form>
     <div ng-hide="editableForm.$visible">
-      <a href="#/overview/{{user.username}}">
+      <a href="/overview/{{user.username}}">
         {{'Přehled znalostí uživatele' | trans}} {{ user.username}}
       </a>
       <div ng-show="editRights">
