Fix some bugs in map progress bars

--- a/geography/static/tpl/view_tpl.html
+++ b/geography/static/tpl/view_tpl.html
@@ -44,7 +44,7 @@
              skills="{{ {
                number_of_flashcards: type.places.length,
                number_of_practiced_flashcards: (type.places|filter:{practiced:true}).length,
-               number_of_mastered_flashcards: (type.places|filter:{mastered:true}).length
+               number_of_mastered_flashcards: (type.places|filter:{mastered:true, practiced:true}).length
              } }}"></div>
         <div class="view-places" collapse="type.hidden">
           <div ng-hide="(type.places|filter:{practiced:true}).length" class="alert alert-info">
