--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -60,7 +60,7 @@
     </div>
     <div ng-if="showSummary" class="inner-practice summary col-lg-12">
       <div class="row">
-        <div class="col-sm-{{user.username ? 6 : 12 }}">
+        <div class="col-sm-{{userService.user.username ? 6 : 12 }}">
           <div class="summary-progress progress" ng-show="summary != undefined">
             <div class="progress-bar progress-bar-learned" 
                  style="width: {{summary.correctlyAnsweredRatio | percent }};">
@@ -77,9 +77,9 @@
             <i class="flag-{{fc.description}}"></i> {{fc.term.name}}
           </span>
         </div>
-        <div class="col-sm-6" ng-if="user.username" >
-          <!--
+        <div class="col-sm-6" ng-if="userService.user.username" >
           <div class="level-progress-bar"></div>
+          <!--
           <div goal-progress map="{{part}}" place-type="{{placeType}}">
         </div>
           -->
