Migrate to angular-gettext

--- a/geography/static/tpl/confirm_modal.html
+++ b/geography/static/tpl/confirm_modal.html
@@ -6,10 +6,10 @@
 </div>
 <div class="modal-footer" >
         <a class="btn btn-lg btn-default" ng-click="cancel()">
-          {{ "Ne" | trans }}
+          {{ "Ne" | translate }}
         </a>
         <a class="btn btn-lg btn-danger" ng-click="confirm();cancel()">
-          {{ "Ano" | trans }}
+          {{ "Ano" | translate }}
         </a>
 </div>
 
