--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -16,45 +16,45 @@
   {% load i18n %}
     -->
   <div class="welcome-page jumbotron">
-      <h1 >{{ "Slepé Mapy"|trans }}</h1>
+      <h1 >{{ "Slepé Mapy"|translate }}</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | trans }}
+        <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | translate }}
         </div>
           <a href="/practice/europe/state"
             class="btn btn-primary btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Státy Evropy" | trans }}
+            {{"Státy Evropy" | translate }}
           </a>
           <a href="/practice/cz/river"
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Řeky ČR" | trans }}
+            {{"Řeky ČR" | translate }}
           </a>
           <a href="/practice/us/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Státy USA" | trans }}
+            {{"Státy USA" | translate }}
           </a>
           <a href="/practice/cz/mountains" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Pohoří ČR" | trans }}
+            {{"Pohoří ČR" | translate }}
           </a>
           <a href="/practice/asia/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Státy Asie" | trans }}
+            {{"Státy Asie" | translate }}
           </a>
           <a href="/practice/africa/river" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Řeky Afriky" | trans }}
+            {{"Řeky Afriky" | translate }}
           </a>
         <div class="flatblock-content">
-          {{"Chcete jinou? Podívejte se na" | trans }} 
+          {{"Chcete jinou? Podívejte se na" | translate }} 
           <a href="#/overview/"
             track-click="homepage practice" >
-            {{"další mapy" | trans }}</a>.
+            {{"další mapy" | translate }}</a>.
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
@@ -64,36 +64,36 @@
   </div>
 
 <div class="how-it-works">
-<h2>{{"Jak to funguje?" | trans }}</h2>
+<h2>{{"Jak to funguje?" | translate }}</h2>
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-tower"></i>{{"Zeměpis hrou" | trans }}</h3>
-{{"Zeměpis hrou - text" | trans}}
+<h3><i class="glyphicon glyphicon-tower"></i>{{"Zeměpis hrou" | translate }}</h3>
+{{"Zeměpis hrou - text" | translate}}
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-dashboard"></i> {{"Adaptabilní procvičování" | trans}}</h3>
-{{"Adaptabilní procvičování - text" | trans}}
+<h3><i class="glyphicon glyphicon-dashboard"></i> {{"Adaptabilní procvičování" | translate}}</h3>
+{{"Adaptabilní procvičování - text" | translate}}
   <img ng-src="/static/img/practice-example-{{LANGUAGE_CODE}}.png"
-    alt="{{'Ukázka procvičování' | trans}}"/>
+    alt="{{'Ukázka procvičování' | translate}}"/>
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-globe"></i> {{"Specializovaný systém" | trans}}</h3>
-{{"Specializovaný systém - text" | trans}}
+<h3><i class="glyphicon glyphicon-globe"></i> {{"Specializovaný systém" | translate}}</h3>
+{{"Specializovaný systém - text" | translate}}
 </div>
 
 <div class="works-div">
-  <h3><i class="glyphicon glyphicon-picture"></i> {{"Vizualizace znalostí" | trans}}</h3>
-  {{"Vizualizace znalostí - text" | trans}}
+  <h3><i class="glyphicon glyphicon-picture"></i> {{"Vizualizace znalostí" | translate}}</h3>
+  {{"Vizualizace znalostí - text" | translate}}
   <img src="/static/img/knowledge-map.png"
-    alt="{{'Ukázka mapy znalostí' | trans}}"/>
+    alt="{{'Ukázka mapy znalostí' | translate}}"/>
 </div>
 
 <div class="works-div">
-<h3><i class="glyphicon glyphicon-stats"></i> {{"Učení z dat" | trans}}</h3>
-{{"Učení z dat - text" | trans}}
+<h3><i class="glyphicon glyphicon-stats"></i> {{"Učení z dat" | translate}}</h3>
+{{"Učení z dat - text" | translate}}
 </div>
 </div>
 <div class="clearfix"></div>
