--- a/geography/static/tpl/user_tpl.html
+++ b/geography/static/tpl/user_tpl.html
@@ -2,7 +2,7 @@
   <div class="col-sm-offset-2 col-sm-8">
    <form editable-form name="editableForm" onaftersave="saveUser()">
     <h1>{{user.username}}
-      <i tooltip="{{'Upravit profil' | trans }}"
+      <i tooltip="{{'Upravit profil' | translate }}"
          ng-show="editRights && !editableForm.$visible"
          tooltip-placement="bottom"
          ng-click="editableForm.$show()"
@@ -12,22 +12,22 @@
     <div ng-hide="editableForm.$visible">
       <div class="level-progress-bar" username="{{user.username}}"></div>
       <dl class="points" ng-show="user.points">
-        <dt>{{'Body' | trans }}</dt>
+        <dt>{{'Body' | translate }}</dt>
         <dd class="badge" ng-bind="user.points"
-          tooltip="{{'přibývají za každou správnou odpověď' | trans }}" 
+          tooltip="{{'přibývají za každou správnou odpověď' | translate }}" 
           tooltip-placement="bottom" ></dd>
       </dl>
     </div>
     <dl>
-      <dt>{{'Jméno' | trans }}</dt>
+      <dt>{{'Jméno' | translate }}</dt>
       <dd editable-text="user.first_name"  e-name="first_name">{{user.first_name}}</dd>
     </dl>
     <dl>
-      <dt>{{'Příjmení' | trans }}</dt>
+      <dt>{{'Příjmení' | translate }}</dt>
       <dd editable-text="user.last_name">{{user.last_name}}</dd>
     </dl>
     <dl ng-show="editRights">
-      <dt>{{'E-mail' | trans }}</dt>
+      <dt>{{'E-mail' | translate }}</dt>
       <dd editable-text="user.email">{{user.email}}</dd>
     </dl>
     <div class="buttons">
@@ -61,7 +61,7 @@
       </a>
       <div ng-show="editRights">
         <br>
-        <h4>{{'Sdílej svůj profil' | trans }}</h4>
+        <h4>{{'Sdílej svůj profil' | translate }}</h4>
         <div my-fb-share="" data-type="button" data-href="{{profileUrl}}"></div>
         <!-- Place this tag where you want the share button to render. -->
         <span class="g-plus-wrapper">
