Fix "See more maps" on homepage doesn't work
Closes #125

--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -52,7 +52,7 @@
           </a>
         <div class="flatblock-content">
           {{"Chcete jinou? Podívejte se na" | translate }} 
-          <a href="#/overview/"
+          <a href="/overview/"
             track-click="homepage practice" >
             {{"další mapy" | translate }}</a>.
         </div>
