--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -64,7 +64,7 @@
           <div class="summary-progress progress" ng-show="summary != undefined">
             <div class="progress-bar progress-bar-learned"
                  style="width: {{summary.correctlyAnsweredRatio | percent }};">
-              {{'Úspěšnost' | trans}}: {{summary.correctlyAnsweredRatio | percent }}
+              {{'Úspěšnost' | translate }}: {{summary.correctlyAnsweredRatio | percent }}
             </div>
             <div class="progress-bar progress-bar-unlearned"
                  style="width: {{(1 - summary.correctlyAnsweredRatio) | percent }};">
