--- a/geography/static/tpl/practice_tpl.html
+++ b/geography/static/tpl/practice_tpl.html
@@ -47,7 +47,7 @@
         </button>
         <button class="btn btn-lg btn-default next {{!canNext || 'btn-primary'}}"
                 ng-click="next()"
-                ng-disabled="!canNext || checking " >
+                ng-disabled="!canNext || checking || error" >
             <i class="glyphicon glyphicon-arrow-right"></i> {{'Pokračovat' | translate }}
         </button>
         <button class="btn btn-lg btn-default"
