--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -1,19 +1,19 @@
 <div class="how-it-works about">
-<h2>O projektu</h2>
+<h2 translate>O projektu</h2>
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
   <div class="works-div">
-    <h3>Kdo za tím stojí</h3>
+    <h3 translate>Kdo za tím stojí</h3>
 
     <a href="http://www.fi.muni.cz/adaptivelearning/" class="pull-right al-logo">
       <img src="/static/img/al-logo.png" alt="Adaptive Learning logo"/>
     </a>
-    <p>
+    <p translate>
     Slepé mapy jsou vyvíjeny na <a href="http://www.fi.muni.cz/">
     Fakultě informatiky Masarykovy univerzity</a>, 
     konkrétně v rámci skupiny <a href="http://www.fi.muni.cz/adaptivelearning/">Adaptive Learning</a>. 
     </p>
-    <p>
+    <p translate>
     Mezi další projekty této skupiny patří:
     </p>
     <ul>
@@ -34,52 +34,90 @@
       </li>
     </ul>
 
-    <p>
+    <p translate>
     Na vývoji Slepých map se podílí především Vít Stanislav a Jan Papoušek.
     </p>
 
-    <p>
+    <p translate>
     Pokud studujete na FI a máte zájem se zapojit do vývoje podobného typu systémů,
     případně pokud máte zájem o výzkumnou spolupráci, kontaktujte
     <a href="http://www.muni.cz/people/4297">Radka Pelánka</a>.
     </p>
 
-    <p>
+    <p translate>
     Náměty k rozvoji systému zasílejte na 
     <span class="email contact">slepemapy{zavinac}googlegroups.com</span>.
     </p>
   </div>
-
   <div class="works-div">
-    <h3>Soukromí</h3>
-    Data o odpovědích jsou ukládána a jsou využívána pro výběr vhodných otázek a pro výzkumné účely. Všechna tato data jsou zpracovávána anonymně. Přihlašovací údaje (Facebook, Google) jsou použity pouze pro určení identity při opakovaných návštěvách, jinak se s nimi nepracuje.
+    <h3 translate>Překlady</h3>
+    <ul>
+      <li translate>
+        <i class="flag-cs"></i> Česká a <i class="flag-en"></i> Anglická verze
+        systému je dílem výše uvedených vývojářů.
+      </li>
+      <li translate>
+        <i class="flag-es"></i> Španělský překlad vytvořil Benjamin Valdes.
+      </li>
+      <li translate>
+        <i class="flag-de"></i> Německý překlad vytvořila Petra Moskva a její
+        studentky z Gymnázia a Obchodní Akdemie Orlová.
+      </li>
+    </ul>
+    <br>
+    <p translate>
+      Pokud se chcete zapojit do překládání Slepých map, můžete tak učinit na 
+      <a href="https://www.transifex.com/adaptive-learning/slepemapycz/">
+      Transifex.com stránce projektu</a>.
+    </p>
   </div>
 
   <div class="works-div">
-    <h3>Zdroje</h3>
+    <h3 translate>Soukromí</h3>
+    <p translate>
+    Data o odpovědích jsou ukládána a jsou využívána pro výběr vhodných otázek a pro výzkumné účely. Všechna tato data jsou zpracovávána anonymně. Přihlašovací údaje (Facebook, Google) jsou použity pouze pro určení identity při opakovaných návštěvách, jinak se s nimi nepracuje.
+    </p>
+  </div>
+
+  <div class="works-div">
+    <h3 translate>Zdroje</h3>
 
     <ul>
-      <li><a href="http://www.naturalearthdata.com/">Natural Earth Data</a> - zdroj
-      většiny mapových podkladů (svět, kontinenty, většina států)</li>
-      <li><a href="http://www.gadm.org/">Global Administrative Areas</a> -
-       administrativní členění Itálie, Francie a Španělska </li>
-      <li><a href="http://download.geofabrik.de/">OpenStreetMap Data Extracts</a> -
-      města České republiky a Slovenska</li>
+      <li>
+        <a href="http://www.naturalearthdata.com/">Natural Earth Data</a>
+        <span translate> - zdroj většiny mapových podkladů (svět, kontinenty,
+        většina států)</span>
+      </li>
+      <li>
+        <a href="http://www.gadm.org/">Global Administrative Areas</a>
+        <span translate> - administrativní členění Itálie, Francie a Španělska
+        </span>
+        </li>
+      <li>
+        <a href="http://download.geofabrik.de/">OpenStreetMap Data Extracts</a>
+        <span translate> - města České republiky a Slovenska</span>
+        </li>
     </ul>
 
     <ul>
-      <li><a href="http://flag-sprites.com/">Flag sprites</a> -
-      vlaječky států světa a USA</li>
-      <li><a href="http://en.wikipedia.org/wiki/Template:Flag">Wikipedia Flags</a> -
-      vlaječky ostatních administrativnách celků </li>
+      <li>
+        <a href="http://flag-sprites.com/">Flag sprites</a>
+        <span translate> - vlaječky států světa a USA</span>
+      </li>
+      <li>
+        <a href="http://en.wikipedia.org/wiki/Template:Flag">Wikipedia Flags</a>
+        <span translate> - vlaječky ostatních administrativních celků</span>
+      </li>
     </ul>
    </div>
   <div class="works-div">
-    <h3>Ocenění</h3>
-    Aplikace byla oceněna v Soutěži 
-    <a href="http://www.otevrenadata.cz/">Společně otevíráme data</a>,
-     pořádané 
-    <a href="http://www.motejl.cz/">Fondem Otakara Motejla</a>.
+    <h3 translate>Ocenění</h3>
+    <p translate>
+      Aplikace byla oceněna v Soutěži 
+      <a href="http://www.otevrenadata.cz/">Společně otevíráme data</a>,
+       pořádané 
+      <a href="http://www.motejl.cz/">Fondem Otakara Motejla</a>.
+    </p>
    </div>
 </div>
 <div class="clearfix"></div>
