Change homepage second row buttons

--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -35,20 +35,20 @@
             track-click="homepage practice" >
             {{"Státy USA" | translate }}
           </a>
-          <a href="/practice/cz/mountains" 
+          <a href="/practice/africa/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Pohoří ČR" | translate }}
+            {{"Státy Afriky" | translate }}
           </a>
-          <a href="/practice/asia/state" 
+          <a href="/practice/europe/city" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Státy Asie" | translate }}
+            {{"Města Evropy" | translate }}
           </a>
-          <a href="/practice/africa/river" 
+          <a href="/practice/world/state" 
             class="btn btn-default btn-lg btn-huge" 
             track-click="homepage practice" >
-            {{"Řeky Afriky" | translate }}
+            {{"Státy Světa" | translate }}
           </a>
         <div class="flatblock-content">
           {{"Chcete jinou? Podívejte se na" | translate }} 
