Update links to other systems

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -27,8 +27,15 @@
         <a href="http://slepaanatomie.cz/">Slepá anatomie</a>,
       </li>
       <li>
+        <a href="http://anatom.cz/">anatom.cz</a>,
+      </li>
+      <li>
+        <a href="http://www.poznavackaprirody.cz/">Poznávačka přírody</a>,
+      </li>
+      <li>
         <a href="http://matmat.cz/">MatMat</a>,
       </li>
+      
       <li>
         <a href="http://autoskolachytre.cz/">Autoškola chytře</a>.
       </li>
