--- a/geography/static/tpl/homepage.html
+++ b/geography/static/tpl/homepage.html
@@ -16,7 +16,7 @@
   {% load i18n %}
     -->
   <div class="welcome-page jumbotron">
-      <h1 >{{ "Slepé Mapy"|translate }}</h1>
+      <h1 >{{ "Slepé mapy"|translate }}</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
         <div class="flatblock-content">{{ "Vyberte si mapu k procvičování:" | translate }}
         </div>
