Update volunteers incentive with translations info

--- a/geography/static/tpl/content-admin-offer.html
+++ b/geography/static/tpl/content-admin-offer.html
@@ -1,41 +1,65 @@
 <div class="how-it-works about">
 <br>
 <br>
-  <h2 >Možnost podílet se na obsahu Slepých map</h2>
+  <h2 >Možnost podílet se na rozvoji Slepých map</h2>
 <br>
   <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
     <div class="works-div">
       <p>
       Slepemapy.cz je projekt, který děláme protože nás baví, a protože chceme
-      zkoumat, jak se lidé učí. Jsme však informatici a výzkumníci, takže se
-      věnujeme hlavně vývoji a zkoumání, zatímco nabídka map se v poslední době nijak
-      nerozvíjí (přestože naši uživatelé opakovaně vyjadřují zájem o další mapy,
+      zkoumat, jak se lidé učí a jak jim při tom můžeme pomoct. Jsme však 
+      informatici a výzkumníci, takže se
+      věnujeme hlavně vývoji a zkoumání, zatímco ostatní aspekty aplikace byly
+      v poslední době zanedbávány. Například nabídka map se dlouhou dobu nijak
+      nerozvíjela (přestože naši uživatelé opakovaně vyjadřují zájem o další mapy,
       např. moře, zálivy a průlivy nebo nížiny, pouště, apod.). Hledáme tedy
       dobrovolníky ochotné se rozšiřování obsahu Slepých map věnovat.
       </p>
+      <p>
+      Celý projekt je neziskový, a tudíž nemůžeme nabídnout finanční odměnu. Hlavní
+      motivací Vám budiž čest a sláva (třeba v podobě uvedení Vašeho jména na stránce “O
+      projektu” a jiných relevantních místech) a dobrý pocit z práce, která
+      pomůže mnoha studentům v učení (stovky každý den).
+      </p>
+      <p>
+      Momentálně máme dva způsoby, jak se můžete zapojit (viz níže).
+      Jsme však otevřeni diskuzi o jakýchkoliv dalších možnostech spolupráce.
+      Pokud Vás některá z možností zaujme nebo k nim budete mít nějaké otázky,
+      napište nám na email:
+      <div class="text-center">
+        <a class="btn-lg"
+          href="mailto:slepemapy@googlegroups.com">slepemapy@googlegroups.com</a>
+      </div>
+      </p>
     </div>
+    <div class="clearfix"></div>
+  </div>
+  <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
+    <h3>Překlad do dalších jazyků</h3>
+    <div class="works-div">
+      <p>
+        Aplikace byla přeložena do angličtiny, němčiny a španělštiny. Pokud se
+        bude obsah aplikace dále rozvíjet, je potřeba překládat i nový obsah.
+        V případě zájmu je možné začít i překlad nějakého dalšího jazyka.
+        Překlady jsou spravovány ve službě nas správu překladů 
+        <a href="https://www.transifex.com/">transifex.com</a>
+        Překládání je uživatelsky velmi přívětivé. Stačí začít kliknutím 
+        <a href="https://www.transifex.com/adaptive-learning/slepemapycz/">
+        na transifex stránce projektu slepemapy.cz</a> na zelené tlačítko 
+        <a href="https://www.transifex.com/signup/?join_project=slepemapycz">
+        POMOZTE PŘELOŽIT "slepemapy.cz"</a>.
+      </p>
+    </div>
+    <h3> Příprava map v GIS software</h3>
     <div class="works-div">
       <p>
       Aplikace potřebuje mapy ve formátu <a
       href="https://en.wikipedia.org/wiki/Shapefile">Shapefile</a>, a proto hledáme někoho se
       znalostí nějakého GIS software (např. <a
       href="http://www.qgis.org/en/site/">QGIS</a>) s možností ukládání map do
-      formátu Shapefile. Na bližších detailech se můžeme domluvit na níže uvedeném
+      formátu Shapefile. Na bližších detailech se můžeme domluvit na výše uvedeném
       emailu.
-      </p>
-    </div>
-    <div class="works-div">
-      <p>
-      Celý projekt je neziskový, a tudíž nemůžeme nabídnout finanční odměnu. Hlavní
-      motivací Vám budiž čest a sláva (třeba v podobě uvedení Vašeho jména na stránce “O
-      projektu” a jiných relevantních místech) a dobrý pocit z práce, která
-      pomůže mnoha studentům v učení (stovky každý den). Pokud Vás nabídka zaujala nebo k ní
-      máte nějaké otázky, napište nám na email:
-      <div class="text-center">
-        <a class="btn-lg"
-          href="mailto:slepemapy@googlegroups.com">slepemapy@googlegroups.com</a>
-      </div>
       </p>
     </div>
   </div>
