--- a/geography/static/tpl/content_admin_banner.html
+++ b/geography/static/tpl/content_admin_banner.html
@@ -1,13 +1,12 @@
 <div class="bottom-alert text-center alert alert-info" 
-  ng-if="!('offer'|cookieExists)">
+  ng-if="!('offer2'|cookieExists)">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"
-      set-cookie-on-click="offer"
+      set-cookie-on-click="offer2"
       track-click="close content admin banner">
     <span aria-hidden="true">&times;</span>
     <span class="sr-only" translate>Zavřít</span>
   </button>
-  <b>Hledáme dobrovolníky</b> se znalostí nějakého GIS software a zájmem
-  zapojit se do rozšíření nabídky map této aplikace.
+  <b>Hledáme dobrovolníky</b> se zájmem zapojit se do vylepšování této aplikace.
   <a href="/offer"
      class="btn btn-primary"
     >Zjistit více informací</a>
