Update about page

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -5,14 +5,14 @@
   <div class="works-div">
     <h3 translate>Kdo za tím stojí</h3>
 
-    <a href="http://www.fi.muni.cz/adaptivelearning/" class="pull-right al-logo">
-      <img src="/static/img/al-logo.png" alt="Adaptive Learning logo"/>
-    </a>
     <p translate>
     Slepé mapy jsou vyvíjeny na <a href="http://www.fi.muni.cz/">
     Fakultě informatiky Masarykovy univerzity</a>, 
     konkrétně v rámci skupiny <a href="http://www.fi.muni.cz/adaptivelearning/">Adaptive Learning</a>. 
     </p>
+    <a href="http://www.fi.muni.cz/adaptivelearning/" class="pull-right al-logo">
+      <img src="/static/img/al-logo.png" alt="Adaptive Learning logo"/>
+    </a>
     <p translate>
     Mezi další projekty této skupiny patří:
     </p>
@@ -55,6 +55,17 @@
     Náměty k rozvoji systému zasílejte na 
     <span class="email contact">slepemapy{zavinac}googlegroups.com</span>.
     </p>
+  </div>
+  <div class="works-div">
+    <h3 translate>Příprava map</h3>
+    <ul>
+      <li translate>
+        Řeky Slovenska připravil Radim Krchňáček
+      </li>
+      <li translate>
+        Ostatní mapy připravil Vít Stanislav
+      </li>
+    </ul>
   </div>
   <div class="works-div">
     <h3 translate>Překlady</h3>
