Publish Austrian rivers

--- a/geography/static/tpl/about.html
+++ b/geography/static/tpl/about.html
@@ -63,6 +63,9 @@
         Řeky Slovenska připravil Radim Krchňáček
       </li>
       <li translate>
+        Rakouské řeky zpracoval Martin Spáčil 
+      </li>
+      <li translate>
         Ostatní mapy připravil Vít Stanislav
       </li>
     </ul>
